SOURCE/objects/Utilization_Review__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Utilization Review</relationshipLabel>
        <relationshipName>Utilization_Review</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorization_Number__c</fullName>
        <label>Authorization Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Managers__c</fullName>
        <label>Care Managers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Care Manager 1</fullName>
                </value>
                <value>
                    <fullName>Care Manager 2</fullName>
                </value>
                <value>
                    <fullName>Care Manager 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Per__c</fullName>
        <label>Per</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Certification</fullName>
                </value>
                <value>
                    <fullName>Concurrent</fullName>
                </value>
                <value>
                    <fullName>Peer to Peer</fullName>
                </value>
                <value>
                    <fullName>Expedited 1</fullName>
                </value>
                <value>
                    <fullName>Expedited 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Review_Date__c</fullName>
        <label>Scheduled Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Authorized_List__c</fullName>
        <label>Service Authorized List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detox</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>PHP/Day-Night</fullName>
                </value>
                <value>
                    <fullName>IOP</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Authorized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Completed/Step Down</fullName>
                </value>
                <value>
                    <fullName>Care Completed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Denial</fullName>
                </value>
                <value>
                    <fullName>Suspended-AMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Utilization Review</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Care_Managers__c</columns>
        <columns>Authorization_Number__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Frequency__c</columns>
        <columns>Per__c</columns>
        <columns>Review_Type__c</columns>
        <columns>Scheduled_Review_Date__c</columns>
        <columns>Service_Authorized__c</columns>
        <columns>Service_Authorized_List__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Units__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utilization Review</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>